--- a/app/src/main/res/layout/activity_settings_app.xml
+++ b/app/src/main/res/layout/activity_settings_app.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/dota_background"
-    tools:context="com.example.discrimine.dotatiming.SettingsAppActivity">
+    tools:context="com.timings.discrimine.dotatiming.SettingsAppActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
